[tool.poetry]
name = "bug-catchers-league"
version = "0.1.0"
description = "A game where you compete with opponents to catch bugs!"
authors = ["Nathaniel Jones <nathaniel-j-jones@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
